# oracle-ai-developer-hub

./: .gitignore  README.md
apps/oracle-data-migration-harness/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/oracle-data-migration-harness/data_migration_harness/: app.py  context.py  environment.py  governance.py  model.py  orchestrator.py  schema_discovery.py  source_config.py
apps/oracle-data-migration-harness/data_migration_harness/instructions/: assessment.md  cutover.md  migrate_mongo.md  oracle_tools.md  system_prompt.md  validation.md
apps/oracle-data-migration-harness/data_migration_harness/memory/: chat_history.py  corpus_store.py  prior_runs.py
apps/oracle-data-migration-harness/data_migration_harness/tools/: agent_tools.py  dbfs.py  duality.py  generic_oracle.py  mongo_reader.py  oracle_landing.py  vector_oracle.py
apps/oracle-data-migration-harness/data_migration_harness/verify/: content.py  counts.py  generic.py  memory.py
apps/oracle-data-migration-harness/scripts/: cache_demo_responses.py  embed_mongo.py  seed_mongo.py
apps/oracle-data-migration-harness/tests/: test_demo_cache.py  test_duality.py  test_environment.py  test_model.py  test_mongo_reader.py  test_orchestrator.py  test_stats_and_reset.py  test_verify.py
apps/oracle-data-migration-harness/ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/oracle-data-migration-harness/ui/src/: App.tsx  index.css  types.ts
apps/oracle-data-migration-harness/ui/src/api/: assess.ts  chat.ts  inspect.ts  memory.ts  migrate.ts  (+2 more)
(+332 files in other folders)
